2008-05-25  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-aix.c, device-src/tape-xenix.c
	  device-src/tape-posix.c: tape_is_ready take a (TapeDevice *) argument
	* device-src/tape-posix.c (tape_is_ready): Check for broken_gmt_online.
	* device-src/property.c: Add broken_gmt_online property.
	* device-src/property.h: Add PROPERTY_BROKEN_GMT_ONLINE.
	* device-src/tape-device.c: Use broken_gmt_online property.
	* device-src/tape-device.h (TapeDevice): Add broken_gmt_online field.
	* device-src/tape-ops.h (tape_is_ready): Change prototype.

2008-05-25  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh: Fix logging.

2008-05-25  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Fix output message.

2008-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/Makefile.am common-src/simpleprng.c
	  common-src/simpleprng.h: new simple PRNG module for
	  reproducible use in tests (bitlength bug fixed).
	* xfer-src/dest-null.c: verify stream against PRNG
	* xfer-src/source-random.c: use PRNG to create stream
	* installcheck/Amanda_Xfer.pl: verify streams in xfers
	* perl/Amanda/Xfer.swg: use PRNG
	* xfer-src/xfer-element.h xfer-src/xfer-test.c: use
	  PRNG to test glue elements

2008-05-23  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_MainLooop.pl: handle SIGCHILD while
	  reading from dying child

2008-05-22  Dustin J. Mitchell <dustin@zmanda.com>
	* xfer-src/xfer-test.c: don't try to write to a file in the
	  source directory

2008-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm (load_ps_table): Fix split.

2008-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Call AMANDA_PS_ARGUMENT
	* config/amanda/ps.m4 (AMANDA_PS_ARGUMENT): New macro to find ps
						    argument.
	* perl/Amanda/Constants.pm.in: Add PS_ARGUMENT.
	* perl/Amanda/Process.pm (load_ps_table): Use PS_ARGUMENT.

2008-05-22  Jean-Louis Martineau <martineau@zmanda.com>